Fixed the position of the navigation on mobile

--- a/WoodenWonders/static/css/common/base.css
+++ b/WoodenWonders/static/css/common/base.css
@@ -329,7 +329,7 @@ main {
   }
 
   .navigation-menu {
-    position: fixed;
+    position: absolute;
     left: -100%;
     top: 100px;
     flex-direction: column;
